--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ version: 2.1
 executors:
   default:
     docker:
-      - image: circleci/ruby:2.7.2-alpine
+      - image: circleci/ruby:2.7.2
         environment:
           RAILS_ENV: test
           BUNDLE_JOBS: 4
